# MultiFunc_Video

./: .gitignore  README.txt  config.yaml  start.bat
MultiFunc_Video/: Dockerfile  NOTICE  README.md  README_EN.md  config.example.yaml  docker-compose.yml  docker-start.sh  mkdocs.yml  pyproject.toml  start_web.bat  start_web.sh
Pixelle-Video/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
Pixelle-Video/workflows/selfhost/ComfyUI-QwenVL/: AILab_QwenVL_PromptEnhancer.py  AILab_System_Prompts.json  README.md  README_zh.md  custom_models_example.json  gguf_requirements.txt  hf_models.json  pyproject.toml  requirements.txt  update.md
Pixelle-Video/workflows/selfhost/ComfyUI-QwenVL/.github/workflows/: close-inactive-issues.yaml  publish.yml
Pixelle-Video/workflows/selfhost/ComfyUI-QwenVL/example_workflows/: QWenVL.json  QwenVL_v2.0.0.json
output/: .index.json  convert_ui_to_api.py  digital_combination_16gb_setup_guide.md  digital_combination_comfyui_diagnosis_report.md  digital_combination_diagnosis.md  digital_combination_lite_no_multitalk.api.json  digital_combination_lite_no_multitalk.json  digital_combination_optimized_16gb.api.json  digital_combination_optimized_16gb.json  download_models.py  install_missing_nodes.ps1  test_video_sync.py  verify_digital_combination_env.ps1  verify_workflow.ps1  verify_workflow.py  数字人教学_技术方案.md
video_generator/: GPT_SOVITS_SETUP.md  Qwen3本地部署指南.md  README.md  aaa运行脚本.txt  check_engine.py  check_env.py  check_methods.py  config.py  download_qwen3_tts.py  generate_16x9_image.py  generate_style_image.py  get_api_info.py  (+48 more)
(+191 files in other folders)
